--- a/style.css
+++ b/style.css
@@ -222,6 +222,59 @@ header * {
     background: #F84D07;
   }
 
+      
+    /* Responsive Start */
+    @media (max-width: 1024px) {
+      #navbar img {
+        margin-left: 20px;
+      }
+      #navbar .search{
+        display: none;
+      }
+    
+      #navbar ul {
+        margin-right: 20px;
+      }
+    
+      #navbar ul li a {
+        padding: 10px;
+      }
+    }
+  
+    @media (max-width: 600px) {
+      #navbar {
+        flex-direction: column;
+      }
+  
+      #navbar img {
+        margin-bottom: 20px;
+        margin-top: 20px;
+        margin-left: -200px;
+      }
+  
+      #navbar .search{
+        display: none;
+      }
+      #navbar .login{
+        /* display: none; */
+        position: absolute;
+        top: 30px;
+        right: 100px;
+      }
+      #navbar .start{
+        display: none;
+      }
+    
+      #navbar ul {
+        margin-right: 40px;
+      }
+    
+      #navbar ul li a {
+        padding: 10px;
+        z-index: 999;
+      }
+    }
+
 /* Header End */
 
 /* Privacy Policy Start */
@@ -243,6 +296,39 @@ body{
   list-style: none;
   line-height: 27px;
 }
+
+ /* Responsive Start */
+ @media (max-width: 1024px) {
+  .prp{
+    width: 900px;
+    margin-left: 40px;
+  }
+  .prp h2{
+    font-size: 25px;
+  }
+  .prp p{
+    font-size: 22px;
+  }
+  .prp li{
+    font-size: 20px;
+  }
+ }
+
+ @media (max-width: 600px) {
+  .prp{
+    width: 350px;
+    margin-left: 20px;
+  }
+  .prp h2{
+    font-size: 25px;
+  }
+  .prp p{
+    font-size: 20px;
+  }
+  .prp li{
+    font-size: 18px;
+  }
+ }
 
 
 /* Privacy Policy END */
@@ -349,7 +435,6 @@ body{
 /*responsive*/
 @media(max-width: 767px){
   .footer-col{
-    width: 50%;
     margin-bottom: 30px;
 }
 }
